# Copyright (C) 2009 Modelon AB
# All Rights reserved
# This file is published under the Common Public License 1.0.


AUTOMAKE_OPTIONS = foreign

SUBDIRS = src/ModelInterface \
          src/OptimicaInterface \
          src/IpoptInterface \
          src/examples/VDPExample \
          src/examples/SimpleExample 


           