cmake_minimum_required (VERSION 2.6)
project (JM_CLIBS)

IF(CMAKE_COMPILER_IS_GNUCC)
   SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -std=c89 -pedantic")
ENDIF(CMAKE_COMPILER_IS_GNUCC)

IF(NOT CMAKE_BUILD_TYPE)
 SET(CMAKE_BUILD_TYPE "Debug")
ENDIF(NOT CMAKE_BUILD_TYPE)

IF(NOT CMAKE_CFG_INTDIR)
 SET(CMAKE_CFG_INTDIR "Debug")
ENDIF(NOT CMAKE_CFG_INTDIR)

#IF(CMAKE_CFG_INTDIR MATCHES "Debug")
#...Debug PART...
#ELSE(CMAKE_CFG_INTDIR MATCHES "Debug")
#...Release PART...
#ENDIF(CMAKE_CFG_INTDIR MATCHES "Debug")

add_subdirectory (Utils)
add_subdirectory (Tests)
add_subdirectory (FMIXML)

